# Dictu

./: .clang-format  .codacy.yaml  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  c.make  dmi.db  t.du  test.du  test.tl  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature-report.md  feature-report.yml
.github/workflows/: main.yml  release.yml
Docker/: DictuAlpineDockerfile  DictuUbuntuDockerfile  README.md
c/: chunk.c  chunk.h  collections.c  collections.h  common.h  compiler.c  compiler.h  debug.c  debug.h  files.c  files.h  linenoise.c  linenoise.h  main.c  memory.c  memory.h  natives.c  natives.h  object.c  object.h  opcodes.h  registry.c  registry.h  scanner.c  scanner.h  strings.c  strings.h  table.c  table.h  util.c  util.h  value.c  value.h  vm.c  vm.h
c/datatypes/: bool.c  bool.h  copy.c  copy.h  dicts.c  dicts.h  files.c  files.h  instance.c  instance.h  lists.c  lists.h  nil.c  number.c  sets.c  sets.h  strings.c  strings.h
c/optionals/: base64.c  base64.h  c.c  c.h  datetime.c  datetime.h  env.c  env.h  hashlib.c  hashlib.h  http.c  http.h  json.c  json.h  jsonBuilderLib.c  jsonLib.c  jsonLib.h  jsonParseLib.c  math.c  math.h  optionals.c  optionals.h  path.c  path.h  process.c  process.h  random.c  random.h  socket.c  socket.h  system.c  system.h
cmake/: FindSodium.cmake
docs/: 404.html  CNAME  _config.yml  index.md
docs/_includes/: head.html
docs/_sass/: content.scss
docs/docs/: base64.md  built-ins.md  classes.md  collections.md  control-flow.md  datetime.md  enum.md  env.md  error-handling.md  files.md  functions.md  getting-started.md  hashlib.md  http.md  json.md  math.md  modules.md  operators.md  path.md  random.md  sockets.md  sqlite.md  standard-lib.md  strings.md  style-guide-best-practices.md  style-guide.md  system.md  thank-you.md  variables.md
docs/includes/: head.html
examples/: README.md  argparse.du  bigint.du  binarySearchTree.du  bubbleSort.du  classes.du  copyFile.du  factorial.du  fibonacci.du  fizzBuzz.du  guessingGame.du  httpClient.du  httpOptions.du  http_client.du  inheritance.du  io.du  ip.du  isPalindrome.du  match.du  methodAnnotations.du  mkdirTemp.du  objectHash.du  object_hash.du  openweathermap.du  pathWalker.du  queue.du  recursiveFib.du  reverse_proxy.du  runExamples.du  shebang.du  staircase.du  structuredLogger.du  structured_logger.du  switch.du  system.du  templateEngine.du  template_engine.du  term.du  uuid.du  writeDevNull.du
examples/design-patterns/: README.md  builder.du  chain-of-responsibility.du  factoryMethod.du  observer.du
examples/ffi-example/: CMakeLists.txt  ffi.du
examples/web-framework/: README.md  run.du  setup.du
ops/: buildAndInstallLatest.du  checkTests.du  generate.du  nfpm.yaml  nfpm_amd64.yaml  orderDocs.du  pkgBuild.du
scripts/: checkTests.du  generate.du
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  argparse.c  argparse.h  linenoise.c  linenoise.h  main.c
src/cli/encodings/: utf8.c
src/cli/linenoise/: linenoise-win32.c  linenoise.c
src/include/: dictu_ffi_include.h  dictu_include.h
src/optionals/: arch.h  archiver.c  archiver.h  argparse.c  argparse.h  base64.c  base64.h  base64Lib.c  base64Lib.h  bigint.c  bigint.h  buffer.c  buffer.h  c.c  c.h  datetime.c  datetime.h  env.c  env.h  ffi.c  ffi.h  fiber.c  fiber.h  hashlib.c  hashlib.h  http.c  http.h  importlib.c  importlib.h  inspect.c  inspect.h  io.c  io.h  json.c  json.h  jsonBuilderLib.c  jsonBuilderLib.h  jsonParseLib.c  log.c  log.h  (+29 more)
src/optionals/argparse/: argparse-source.h  argparse.c  argparse.du  argparse.h
src/optionals/bigint/: bigint.c  bigint.h
src/optionals/env/: env-source.h  env.c  env.du  env.h
src/optionals/ffi/: ffi.c  ffi.h
src/optionals/functools/: functools-source.h  functools.c  functools.h
src/optionals/hashlib/: constants.h  hmac.c  sha256.c  sha256.h  utils.c  utils.h
src/optionals/hashlib/bcrypt/: bcrypt.c  bcrypt.h  bcrypt_pbkdf.c  blf.c  blf.h  portable_endian.h  sha2.c  timingsafe_bcmp.c
src/optionals/http/: http-source.h  http.c  http.du  http.h
src/optionals/object/: object-source.h  object.c  object.du  object.h
src/optionals/process/: process-source.h  process.c  process.du  process.h
src/optionals/unittest/: unittest-source.h  unittest.c  unittest.du  unittest.h
src/vm/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  memory.c  memory.h  natives.c  natives.h  object.c  object.h  opcodes.h  registry.c  registry.h  scanner.c  scanner.h  table.c  table.h  util.c  util.h  value.c  value.h  vm.c  vm.h
src/vm/datatypes/: bool.c  bool.h  class.c  class.h  copy.c  copy.h  dicts.c  dicts.h  enums.c  enums.h  files.c  files.h  generate.du  instance.c  instance.h  list.du  lists.c  lists.h  nil.c  nil.h  number.c  number.h  result.c  result.h  sets.c  sets.h  strings.c  strings.h
src/vm/datatypes/dicts/: dict-source.h  dict.du  dicts.c  dicts.h
src/vm/datatypes/fiber/: fiber.c  fiber.h
src/vm/datatypes/lists/: list-source.c  list-source.h  list.du  lists.c  lists.h
src/vm/datatypes/result/: result-source.h  result.c  result.du  result.h
src/vm/error_lib/: LICENSE  README.md  error.c  error.h  term.c  term.h
tests/: runTests.du
tests/argparse/: import.du  parser.du
tests/base64/: decode.du  encode.du  import.du
tests/benchmarks/: PERF_RESULTS.md  README.md  binaryTree.du  dictionaries.du  fib.du  for.du  format.du  heavy_oop_bench.du  inline_cache_bench.du  methodCall.du  stringEquality.du  t.py
tests/bigint/: abs.du  add.du  bitwiseAnd.du  bitwiseOr.du  bitwiseXor.du  compare.du  divide.du  equals.du  import.du  modulo.du  multiply.du  negate.du  new.du  subtract.du
tests/bool/: import.du  toString.du
tests/buffer/: allocate.du  get.du  import.du  integers.du  resize.du  set.du  string.du  stringFuncs.du  subarray.du
tests/builtins/: __file__.du  import.du  isDefined.du  len.du  maths.du  number.du  sleep.du  str.du  type.du
tests/dicts/: copy.du  (+12 more)
(+382 files in other folders)
